@@ -8,21 +8,31 @@ os = android
 cc = arm-linux-androideabi-gcc
 cxx = arm-linux-androideabi-g++
 ar = arm-linux-androideabi-ar
+make = make
 else ifneq ($(findstring Msys,$(uname)),)
 os = windows
 cc = gcc
 cxx = g++
 ar = ar
+make = make
 else ifneq ($(findstring Darwin,$(uname)),)
 os = macosx
 cc = gcc
 cxx = g++
 ar = ar
+make = make
+else ifneq ($(findstring FreeBSD,$(uname)),)
+os = freebsd
+cc = $(CC)
+cxx = $(CXX)
+ar = $(AR)
+make = gmake
 else
 os = linux
 cc = $(CC)
 cxx = $(CXX)
 ar = $(AR)
+make = make
 endif
 
 debug := 0
